# SimpleEventLoop

./: .gitignore  CMakeLists.txt  README.md  test.cpp
include/: EventLoop.hpp
src/: CMakeLists.txt  EventLoop.cpp
